--- a/bundles/org.openhab.binding.unifiaccess/src/main/resources/OH-INF/i18n/unifiaccess.properties
+++ b/bundles/org.openhab.binding.unifiaccess/src/main/resources/OH-INF/i18n/unifiaccess.properties
@@ -1,3 +1,11 @@
 # FIXME: please add all English translations to this file so the texts can be translated using Crowdin
 # FIXME: to generate the content of this file run: mvn i18n:generate-default-translations
 # FIXME: see also: https://www.openhab.org/docs/developer/utils/i18n.html
+channel-type.unifiaccess.face-anti-spoofing.label = Face Anti-Spoofing
+channel-type.unifiaccess.face-anti-spoofing.option.high = High
+channel-type.unifiaccess.face-anti-spoofing.option.medium = Medium
+channel-type.unifiaccess.face-anti-spoofing.option.no = None
+channel-type.unifiaccess.face-detect-distance.label = Face Detect Distance
+channel-type.unifiaccess.face-detect-distance.option.near = Near
+channel-type.unifiaccess.face-detect-distance.option.medium = Medium
+channel-type.unifiaccess.face-detect-distance.option.far = Far
