--- a/bundles/org.openhab.binding.matter/src/main/resources/OH-INF/i18n/matter.properties
+++ b/bundles/org.openhab.binding.matter/src/main/resources/OH-INF/i18n/matter.properties
@@ -104,6 +104,8 @@ channel-type.matter.occupancysensing-occupied.label = Occupancy
 channel-type.matter.occupancysensing-occupied.description = Indicates if an occupancy sensor is triggered
 channel-type.matter.onoffcontrol-onoff.label = Switch
 channel-type.matter.onoffcontrol-onoff.description = Switches the power on and off
+channel-type.matter.otasoftwareupdaterequestor-updateavailable.label = Update Available
+channel-type.matter.otasoftwareupdaterequestor-updateavailable.description = Indicates if there is a firmware update available for the device. Use the "Start Firmware Update" Thing action to start the update process.
 channel-type.matter.powersource-batchargelevel.label = Battery Charge Level
 channel-type.matter.powersource-batchargelevel.description = Indicates a coarse ranking of the charge level of the battery, used to indicate when intervention is required
 channel-type.matter.powersource-batchargelevel.state.option.0 = Ok
