--- a/bundles/org.openhab.binding.matter/src/main/resources/OH-INF/i18n/matter.properties
+++ b/bundles/org.openhab.binding.matter/src/main/resources/OH-INF/i18n/matter.properties
@@ -477,3 +477,9 @@ matterjs.error.thread-network-setup-failed = Thread network setup failed
 matterjs.error.node-id-conflict = Node ID conflict, reset the device and try again
 matterjs.error.commissionable-device-discovery-failed = The device could not be discovered using the provided code
 matterjs.error.operative-connection-failed = The reconnection process for the device failed, please reset the device and try again
+
+# ota firmware update
+
+ota.matter.firmwareUpdateFailed = Firmware update failed
+ota.matter.firmwareUpdateFailedRollingBack = Firmware update failed and is rolling back
+ota.matter.firmwareUpdateFailedDelayedOnUserConsent = Firmware update failed and is delayed on user consent
